[gd_scene load_steps=2 format=3 uid="uid://drwkyi6oeajcr"]

[ext_resource type="Script" path="res://scripts/enemy_hit.gd" id="1_fwtuw"]

[node name="EnemyHit" type="Area2D"]
script = ExtResource("1_fwtuw")

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
